--- a/_config.yml
+++ b/_config.yml
@@ -15,15 +15,15 @@
 minimal_mistakes_skin    : "air" # "default", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "ko-KR"
 title                    : "Ihmmaru99의 잡동사니"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "임정빈"
-description              : "Everything About Ihmmaru99"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : "임정빈 (Ihm Jeong-Bin"
+description              : "Ihmmaru99의 잡다한 모든 것"
+url                      : "https://ihmmaru99.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "https://github.com/ihmmaru99/ihmmaru99.github.io.git"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -104,30 +104,24 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "임정빈 (Ihm Jeong-Bin)"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "**임정빈의 잡다한 모든 것의 기록**"
+  location         : "Republic of Korea"
   email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:your.name@email.com"
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+      url: mailto:ihmmaru99@gmail.com
+    - label: "Github"
+      icon: "fas fa-fw fa-github"
+      url: "https://github.com/ihmmaru99"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://instagram.com/ihmmaru99"
 
 # Site Footer
 footer:
@@ -290,3 +284,10 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _pages
+  - scope:
+	  path: "_pages"
+	  type: pages
+	values:
+	  layout: single
+	  author_profile: true 
