--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ minimal_mistakes_skin    : "air" # "default", "aqua", "contrast", "dark", "dirt"
 locale                   : "ko-KR"
 title                    : "Ihmmaru99의 잡동사니"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
-name                     : "임정빈 (Ihm Jeong-Bin"
+subtitle                 : "version 1.0" # site tagline that appears below site title in masthead
+name                     : "임정빈 (Ihm Jeong-Bin)"
 description              : "Ihmmaru99의 잡다한 모든 것"
 url                      : "https://ihmmaru99.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "https://github.com/ihmmaru99/ihmmaru99.github.io.git"
+repository               : "https://github.com/ihmmaru99/ihmmaru99.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -112,7 +112,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:ihmmaru99@gmail.com
+	  url: "mailto:ihmmaru99@gmail.com"
     - label: "Github"
       icon: "fas fa-fw fa-github"
       url: "https://github.com/ihmmaru99"
