--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-	  url: mailto:ihmmaru99@gmail.com
+	  url: #
     - label: "Github"
       icon: "fas fa-fw fa-github"
       url: "https://github.com/ihmmaru99"
@@ -134,7 +134,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+	  url: "https://github.com/ihmmaru99"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
