--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@ minimal_mistakes_skin    : "air" # "default", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "Ihmmaru99의 잡동사니"
+title                    : "ihmmaru99의 잡동사니"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "잡다한 모든 것의 기록"
 name                     : "임정빈 (Ihm Jeong-Bin)"
-description              : "Ihmmaru99의 잡다한 모든 것"
+description              : "잡다한 모든 것"
 url                      : "https://ihmmaru99.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : #
+repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -59,8 +59,8 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : true # false (default)
-search_full_content      : true # false (default)
+search                   : # true, false (default)
+search_full_content      : # true, false (default)
 search_provider          : # lunr (default), algolia, google
 lunr:
   search_within_pages    : # true, false (default)
@@ -104,21 +104,30 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ihm Jeong-Bin"
+  name             : "임정빈 (Ihm Jeong-Bin)"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "임정빈의 잡다한 모든 것의 기록"
+  bio              : "**반갑습니다**"
   location         : "Korea"
-  email            : #
+  email            :
   links:
-    - label: "Github"
-      icon: "fas fa-fw fa-github"
-      url: "https://github.com/ihmmaru99"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      # url: "mailto:your.name@email.com"
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      # url: "https://your-website.com"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      # url: "https://twitter.com/"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      # url: "https://github.com/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/ihmmaru99"
+      # url: "https://instagram.com/"
 
 # Site Footer
 footer:
@@ -131,7 +140,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-	  #url: "https://github.com/ihmmaru99"
+      # url:
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
@@ -281,10 +290,3 @@ defaults:
       comments: # true
       share: true
       related: true
-  # _pages
-  - scope:
-	  path: ""
-	  type: pages
-	values:
-	  layout: single
-	  author_profile: true 
