--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ title                    : "Ihmmaru99의 잡동사니"
 title_separator          : "-"
 subtitle                 : "잡다한 모든 것의 기록"
 name                     : "임정빈 (Ihm Jeong-Bin)"
-description              : "잡다한 모든 것"
-url                      : "https://ihmmaru99.github.io"
+description              : "ihmmaru99's blog"
+url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -106,17 +106,41 @@ analytics:
 author:
   name             : "임정빈 (Ihm Jeong-Bin)"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "**반갑습니다**"
+  bio              : "**자율주행 소프트웨어 엔지니어가 되기 위한 노력**"
   location         : "Korea"
   email            : "ihmmaru99@gmail.com"
   links:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      # url: "mailto:your.name@email.com"
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      # url: "https://your-website.com"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      # url: "https://twitter.com/"
+    - label: "Facebook"
+      icon: "fab fa-fw fa-facebook-square"
+      # url: "https://facebook.com/"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      # url: "https://github.com/"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      # url: "https://instagram.com/"
 
 # Site Footer
 footer:
   links:
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      # url:
+    - label: "Facebook"
+      icon: "fab fa-fw fa-facebook-square"
+      # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-	  url: "https://github.com/ihmmaru99"
+      # url:
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
@@ -266,3 +290,10 @@ defaults:
       comments: # true
       share: true
       related: true
+  #_pages
+	-scope:
+		path: "_pages"
+		type: pages
+	values:
+		layout: single
+		author_profile: true
