--- a/_config.yml
+++ b/_config.yml
@@ -290,10 +290,10 @@ defaults:
       comments: # true
       share: true
       related: true
-  #_pages
+  # _pages
 	- scope:
-		path: "_pages"
+		path: ""
 		type: pages
-	values:
+	  values:
 		layout: single
 		author_profile: true
