--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "임정빈 (Ihm Jeong-Bin)"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "**자율주행 소프트웨어 엔지니어가 되기 위한 노력**"
+  bio              : "**자율주행 소프트웨어 엔지니어를 향하여~**"
   location         : "Korea"
   email            :
   links:
