--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "air" # "default", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "ihmmaru99의 잡동사니"
+title                    : "IhmMaru99의 잡동사니"
 title_separator          : "-"
 subtitle                 : "잡다한 모든 것의 기록"
 name                     : "임정빈 (Ihm Jeong-Bin)"
