--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/ihmmaru99/ihmmaru99.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : "ihmmaru99의 잡동사니"
+masthead_title           : "IhmMaru99의 잡동사니"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
