--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "임정빈 (Ihm Jeong-Bin)"
   avatar           : "image/profile/IhmJB_drawing.jpeg"
-  bio              : "**자율주행 소프트웨어 엔지니어(진)~**"
+  bio              : "**자율주행 소프트웨어 엔지니어(진)**"
   location         : "Korea"
   email            :
   links:
