--- a/_config.yml
+++ b/_config.yml
@@ -276,6 +276,7 @@ defaults:
       share: false
       related: true
       mathjax: true
+      sidebar_main: true
   # _pages
   - scope:
       path: "_pages"
