--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "임정빈 (IHM Jeongbin)"
+  name             : "임정빈"
   avatar           : "assets/image/profile/IhmJB_drawing.jpeg"
   bio              : "**자율주행 소프트웨어 엔지니어(진)**"
   location         : "Korea"
